--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <section>
         <nav class="container" style="padding-right: 1rem; padding-left: 1rem; display: inline-table; float: right;">
             <ul>
-                <li><a href="index.html">home</a></li>
-                <li><a href="about.html">about</a></li>
-                <li><a href="resume.html">resume</a></li>
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#resume">resume</a></li>
                 <li><a href="https://github.com/manishbalamurugan">portfolio</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </nav>
     </section>
